# devtail

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  test-append.rb  test-print.rb
src/: cmd.rs  entry.rs  lib.rs  log.rs  main.rs  parser.rs  screen.rs  tail.rs  test_macros.rs
