[package]
name = "devtail"
version = "0.0.1"
authors = ["Fran Casas <nflamel@gmail.com>"]
description = "Like tail but for development logs."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "devtail"
path = "src/lib.rs"

[[bin]]
name = "devtail"
path = "src/main.rs"

[dependencies]
regex = "1"
clap = "2.33.0"
